2004-02-17  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Don't check for an empty $TESTDIR - if $TESTDIR was empty
	then the preceding call to mkdir would have failed anyhow.

2004-02-17  Larry Jones  <lawrence.jones@ugsplm.com>

	* log.c (rlog_proc): Fix (harmless) uninitialized variable.

	* sanity.sh (basicc): Add tests pointing out defective handling
	of the Entries file.

2004-02-17  Derek Price  <derek@ximbiot.com>

	* checkout.c (build_dir_and_chdir): Expand header comment.

2004-02-15  Mark D. Baushke  <mdb@cvshome.org>

	* annotate.c (rannotate_proc): Plug a memory leak.
	* log.c (log_fileproc): Ditto.
	* tag.c (tag_fileproc): Ditto.
	* update.c (checkout_file): Ditto.
	* server.c (server_updated): Do not buf_free (filebuf) here.

2004-02-15  Derek Price  <derek@ximbiot.com>

	Make error() accessible to the GNULIB functions.

	* error.h: Move into the ../lib directory.

2004-02-13  Derek Price  <derek@ximbiot.com>

	* lock.c (Reader_Lock, lock_dir_for_write): Plug memory leaks.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)

2004-02-13  Derek Price  <derek@ximbiot.com>

	* lock.c (remove_lock_files): Minor refactoring.

2004-02-12  Mark D. Baushke  <mdb@cvshome.org>

	* lock.c (lock_exists): Plug a memory leak.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* modules.c: Reformat comment and line to fit in 80 chars.

2004-02-12  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (do_cvs_command): Plug a memory leak.
	(Use buf_free() rather than free().)
	
2004-02-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (lockfiles): Reformat a comment for 80 characters.  Fix a
	few minor issues that caused tests to fail in remote mode.  Clean up
	after test.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* lock.c (unlock_proc): Don't expect an int in closure as it is not
	condoned in the C standard.  For now, just assume zero since this
	function is currently only called from one location.
	(remove_locks): Pass NULL for the closure argument to unlock_proc().
